Updated Sheet to match v19.6.30
General:
¤ Updated Info boxes descriptions and rolls to match v.19.6.30
¤ Updated Initiative Roll to enable choosing "Initiate" or "React"
¤ Updated Defense rolls to no longer ignore PER when Aura is depleted

Weapon section:
¤ Updated Martial Arts Mod line to match v.19.6.30 (new accuracy: STR+PER, new damage: STR)

Skill Check List section
¤ Added expandable "Skill Check list" above Semblance section, containing all fifteen exemple Skill Checks with stand-alone Roll buttons

Semblance Empowering:
¤ Added Empower feature (checkbox) in Defense section
¤ Changed normal Semblance roll Empowering from Checkbox to in-chat button

Dust Phials section:
¤ Added Dust Phial Roll button next to Secondary Attribute selection menu
¤ Removed individual Phial Level roll buttons
¤ Removed reduced mode second line (with Phial Level shortcut rolls)
¤ Phial description fields are still collapsible and take even less space than before

Sheet Options section:
¤ Replaced "Initiative" permanent modifier field with "Dust phials (all)" permanent modifier field
¤ Replaced Semblance Empowering dialog box option with Defense Semblance Empowering dialog box option

--- a/RWBY_RoC-Unofficial_Tabletop_RPG/RWBY-UnofficialTabletopRPG.css
+++ b/RWBY_RoC-Unofficial_Tabletop_RPG/RWBY-UnofficialTabletopRPG.css
@@ -210,7 +210,8 @@ height: 100px;
 }
 
 textarea {
-height: 60px;
+height: 65px;
+width: 460px;
 margin: 1px;
 font-family: sans-serif;
 }
@@ -895,8 +896,8 @@ font-size: 1.1em ;
     width: auto;
     display: inline-block;
     position: absolute;
-    margin-top: -90px;
-    margin-left: -315px;
+    margin-top: -220px;
+    margin-left: -110px;
     color: #111;
     border: 1px solid gray;
     background: #ffffff;
@@ -904,161 +905,6 @@ font-size: 1.1em ;
     font-family: sans-serif;
     font-weight: none;
     font-size: 1em;
-}
-.sheet-phial0 + .sheet-tooltip {
-    z-index: 10;
-    display: none;
-    padding: 4px;
-    text-align: left;
-    margin-left: 0px;
-    font-weight: normal;
-    text-transform: initial;
-    font-variant: initial;
-}
-.sheet-phial0:hover + .sheet-tooltip {
-    z-index: 10;
-    width: auto;
-    display: inline-block;
-    position: absolute;
-    margin-top: -60px;
-    margin-left: -315px;
-    color: #111;
-    border: 1px solid gray;
-    background: #ffffff;
-    line-height: 1.5em;
-    font-family: sans-serif;
-    font-weight: none;
-    font-size: 1em;
-}
-.sheet-phial1+ .sheet-tooltip {
-    z-index: 10;
-    display: none;
-    padding: 4px;
-    text-align: left;
-    margin-left: 0px;
-    font-weight: normal;
-    text-transform: initial;
-    font-variant: initial;
-}
-.sheet-phial1:hover + .sheet-tooltip {
-    z-index: 10;
-    width: auto;
-    display: inline-block;
-    position: absolute;
-    margin-top: -120px;
-    margin-left: -315px;
-    color: #111;
-    border: 1px solid gray;
-    background: #ffffff;
-    line-height: 1.5em;
-    font-family: sans-serif;
-    font-weight: none;
-    font-size: 1em;
-}
-
-.sheet-phialquickroll {
-    margin-right: 11px;
-}
-.sheet-phialquickroll + .sheet-tooltip {
-    z-index: 10;
-    display: none;
-    padding: 0px;
-    text-align: left;
-    margin-left: 0px;
-    font-weight: normal;
-    text-transform: initial;
-    font-variant: initial;
-}
-.sheet-phialquickroll:hover + .sheet-tooltip {
-    z-index: 100;
-    width: auto;
-    display: inline-block;
-    position: absolute;
-    margin-top: -28px;
-    margin-left: -15px;
-    padding: 2px;
-    color: #111;
-    border: 1px solid gray;
-    background: #ffffff;
-    line-height: 1.5em;
-    font-family: sans-serif;
-    font-weight: none;
-    font-size: 1em;
-    width: auto;
-    height: auto;
-}
-
-.sheet-phialquickroll + .sheet-tooltip2 {
-    z-index: 10;
-    display: none;
-    padding: 0px;
-    text-align: left;
-    margin-left: 0px;
-    font-weight: normal;
-    text-transform: initial;
-    font-variant: initial;
-}
-.sheet-phialquickroll:hover + .sheet-tooltip2 {
-    z-index: 100;
-    width: auto;
-    display: inline-block;
-    position: absolute;
-    margin-top: -28px;
-    margin-left: -240px;
-    padding: 2px;
-    color: #111;
-    border: 1px solid gray;
-    background: #ffffff;
-    line-height: 1.5em;
-    font-family: sans-serif;
-    font-weight: none;
-    font-size: 1em;
-    width: 185px;
-    height: auto;
-}
-
-.sheet-phialquickroll + .sheet-tooltip3 {
-    z-index: 10;
-    display: none;
-    padding: 0px;
-    text-align: left;
-    margin-left: 0px;
-    font-weight: normal;
-    text-transform: initial;
-    font-variant: initial;
-}
-.sheet-phialquickroll:hover + .sheet-tooltip3 {
-    z-index: 100;
-    width: auto;
-    display: inline-block;
-    position: absolute;
-    margin-top: -28px;
-    margin-left: -250px;
-    padding: 2px;
-    color: #111;
-    border: 1px solid gray;
-    background: #ffffff;
-    line-height: 1.5em;
-    font-family: sans-serif;
-    font-weight: none;
-    font-size: 1em;
-    width: 185px;
-    height: auto;
-}
-
-
-.sheet-tooltipphial {
-    width: 100px;
-    height: 50px;
-}
-
-.sheet-phialquicklabel {
-    font-family: sans-serif;
-    font-weight: bold;
-    font-size: 0.9em;
-    text-align: right;
-    display: inline;
-    padding-left: 5px;
 }
 
 /*======================================================arrow===*/
@@ -1320,6 +1166,19 @@ input.sheet-arrowmod ~ div.sheet-phialquick
 input.sheet-arrowmod:checked ~ div.sheet-phialquick
 {
     display: none;
+}
+
+
+/*----------------skilllist--------------------------*/
+
+input.sheet-arrowmod ~ div.sheet-skilllist
+{
+    display: none;
+}
+
+input.sheet-arrowmod:checked ~ div.sheet-skilllist
+{
+    display: block;
 }
 
 
