add logos to Starfinder Mancer uc-619

--- a/Starfinder by Roll20/Starfinder.css
+++ b/Starfinder by Roll20/Starfinder.css
@@ -3739,6 +3739,26 @@ grid-template-columns:0px [life-support-start sensors-start weapons-start weapon
     margin-top:10px;
 }
 /*############################################################ Charmancer Styling ############################################################*/
+div.sheet-logo-row {
+    display              : grid;
+    grid-column-gap      : 1%;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content      : space-between;
+    margin-bottom        : 2%;
+    max-width            : 100%;
+}
+
+div.sheet-logo-row img {
+    padding-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div.sheet-logo-row img[alt*="Roll20"] {
+    height: 100%;
+    width: 80%;
+}
+
 .sheet-attributes-row {
     display: grid;
     grid-template-columns: 15% 15% 15% 15% 15% 15%;
