uc-619 fix the class level default

--- a/Starfinder by Roll20/Starfinder.css
+++ b/Starfinder by Roll20/Starfinder.css
@@ -3925,6 +3925,10 @@ div.sheet-logo-row img[alt*="Roll20"] {
 .sheet-status-control[value*='expanded']~.sheet-mancernav .sheet-section button {
     color: #fff;
 }
+.sheet-class-view[value*='levels']~div.sheet-choice.sheet-mancer-levels,
+.sheet-class-view[value*='abilities']~div.sheet-choice.sheet-mancer-abilities-display {
+    display: grid;
+}
 .sheet-mancernav-collapsible > .sheet-section > button:before{
     font-family: pictos;
     content: "4";
