BTATOW Add rollable button to skills.

--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.css
@@ -60,6 +60,11 @@ button[type=roll].sheet-skill-roll::before {
     content: none;
 }
 
+button[type=roll].sheet-d6 {
+    font-family: dicefontd6;
+    font-size: large;
+}
+
 .sheet-skills.sheet-content {
     border-color: #000000;
     border-radius: 0;
@@ -90,6 +95,10 @@ button[type=roll].sheet-skill-roll::before {
 
 .sheet-skills-xp, input[type=number].sheet-skills-xp {
     width: 26px;
+}
+
+.sheet-skill-roll {
+    width: 20px;
 }
 
 select.sheet-skills::-ms-expand {
