--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
@@ -89,6 +89,17 @@ input.sheet-hide:checked ~ h4.sheet-section-head {
 /* -------------------------------------------------------------------------- */
 
 
+.charsheet div.sheet-simplearmorsection {
+    display: none;
+}
+
+.sheet-togglesimplearmor[value="1"]:checked ~ div.sheet-simplearmorsection {
+    display: block;
+}
+
+/* -------------------------------------------------------------------------- */
+
+
 .charsheet div.sheet-armorsection {
     display: none;
 }
@@ -401,12 +412,11 @@ h4.sheet-section-head {
 
 hr { 
   display: block;
-  margin-top: 0.35em;
-  margin-bottom: 0.35em;
-  margin-left: auto;
-  margin-right: auto;
-  border-style: inset;
-  border-width: 1px;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
 div.sheet-section {
@@ -428,8 +438,8 @@ table td.sheet-attr-label {
 }
 
 input[type="text"].sheet-attr-input {
-    width: 55px; 
-    height: 55px; 
+    width: 52px; 
+    height: 52px; 
     font-size: 200%; 
     text-align: center;
 }
@@ -1249,9 +1259,9 @@ input {
 /* Button for PD/BD */
 button[type=roll].sheet-old-roll {
   color: #1b0333;
-  background-color: #1b0333;
-  font-weight: bold;
-  text-align:center;
+  background-color: #ac74e3;
+  font-weight: bolder;
+  text-align: center;
   width: 20px;
   height: 20px;
   margin: 0.0;
@@ -1264,10 +1274,10 @@ button[type=roll].sheet-old-roll {
 
 /* Button for Simple */
 button[type=roll].sheet-new-roll {
-  color: #18650D;
+  color: #0c3307;
   background-color: #18650D;
-  font-weight: bold;
-  text-align:center;
+  font-weight: bolder;
+  text-align: center;
   width: 20px;
   height: 20px;
   margin: 0.0;
@@ -1280,10 +1290,10 @@ button[type=roll].sheet-new-roll {
 
 /* Button Small */
 button[type=roll].sheet-dice-roll {
-  color: #1b0333;
-  background-color: #1b0333;
-  font-weight: bold;
-  text-align:center;
+  color: #000000;
+  background-color: #1a1a1a;
+  font-weight: bolder;
+  text-align: center;
   width: 18px;
   height: 18px;
   margin: 0.0;
@@ -1296,10 +1306,43 @@ button[type=roll].sheet-dice-roll {
 
 /* Button Smaller */
 button[type=roll].sheet-smallbutton-roll {
-  color: #18650D; 
+  color: #0c3307; 
   background-color: #18650D;
-  font-weight: bold;
-  text-align:center;
+  font-weight: bolder;
+  font-size: 12px;
+  text-align: center;
+  width: 16px;
+  height: 16px;
+  margin: 0.0;
+  padding: 0.0em;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+/* -------------------------------------------------------------------------- */
+
+/* Non-Skill Button Smaller */
+button[type=roll].sheet-smallnonskillbutton-roll {
+  color: #000000; 
+  background-color: #1a1a1a;
+  font-weight: bolder;
+  font-size: 12px;
+  text-align: center;
+  width: 16px;
+  height: 16px;
+  margin: 0.0;
+  padding: 0.0em;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+/* -------------------------------------------------------------------------- */
+
+/* Button Even Smaller */
+button[type=roll].sheet-evensmallerbutton-roll {
+  color: #000000; 
+  background-color: #1a1a1a;
+  font-weight: bolder;
+  font-size: 8px;
   width: 14px;
   height: 14px;
   margin: 0.0;
