--- a/D6StarWars/D6StarWars.css
+++ b/D6StarWars/D6StarWars.css
@@ -9,7 +9,7 @@
 }
 
 .charsheet .sheet-version::after {
-    content: 'Sheet Version 2.00';
+    content: '2.13';
 }
 
 .charsheet label, h1, h2, h3{
@@ -31,13 +31,17 @@
 
 .charsheet .sheet-section{
     border-top: 5px dotted white;
-    padding-top:10px;
-    padding-bottom:10px;
+    padding:10px;
 	width: 100%;
 }
 
+.charsheet .sheet-shipinfo span {
+    display: inline-block;
+    margin: 5px 10px 5px 10px;
+}
+
 .charsheet .sheet-flex-box{
-		display: flex;
+	display: flex;
 }
 .charsheet .sheet-flex-col{
     flex: 1;
@@ -67,10 +71,11 @@
     width:60px;
 }
 
-.charsheet input[type=number].sheet-credits{
-    width:80px;
-    padding-top:2px;
-    padding-bottom:2px;
+.charsheet input[type=number].sheet-credits,
+.charsheet span.sheet-credits {
+    width: 80px;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
 .charsheet input[type=text].sheet-smalltext{
@@ -107,10 +112,23 @@
     margin-bottom: 10px;
 }
 
+.charsheet span.sheet-num {
+    background: white;
+    color: black;
+    border-radius: 2px;
+    padding: 4px;
+    margin: 5px;
+    height: 28px;
+    width: 50px;
+}
+
+
 .charsheet .sheet-tdborder{
     border: 2px solid white;
     vertical-align:top;
-    width:320px;
+    width:330px;
+    padding:5px;
+    margin: 5px;
 }
 
 .charsheet .sheet-rightmargin{
@@ -213,14 +231,28 @@ input.sheet-options-flag:checked ~ div.sheet-main-container {
 
 /* all hide options using option menu checkboxes*/
 
+.sheet-master-container .sheet-pc,
+.sheet-master-container .sheet-npc,
+.sheet-master-container .sheet-ship,
+.sheet-master-container .sheet-shop-inventory {
+    display: none;
+}
+
+input.sheet-toggle[value="0"] ~ .sheet-master-container .sheet-pc,
+input.sheet-toggle[value="1"] ~ .sheet-master-container .sheet-npc,
+input.sheet-toggle[value="2"] ~ .sheet-master-container .sheet-ship,
+input.sheet-toggle[value="3"] ~ .sheet-master-container .sheet-shop-inventory {
+    display: block;
+}
+
 input.sheet-background:checked  ~ .sheet-master-container .sheet-background-hide,
 input.sheet-force:checked ~ .sheet-master-container .sheet-force-hide,
 input.sheet-equipment:checked ~ .sheet-master-container .sheet-equipment-hide,
-input.sheet-npc:checked  ~ .sheet-master-container .sheet-npc-hide ,
-input.sheet-npc:not(:checked) ~ .sheet-master-container .sheet-pc-hide,
 input.sheet-gmroll:checked ~ .sheet-master-container .sheet-gmroll-hide,
 input.sheet-rollmod:checked ~ .sheet-master-container .sheet-rollmod,
-input.sheet-rollmod:not(:checked) ~ .sheet-master-container .sheet-rollmod-no  {
+input.sheet-rollmod:not(:checked) ~ .sheet-master-container .sheet-rollmod-no,
+input.sheet-cptracker:checked ~ .sheet-master-container .sheet-cptracker-hide,
+input.sheet-credittracker:checked ~ .sheet-master-container .sheet-credittracker-hide  {
 	display: none;
 }
 
