--- a/Mekton Z/Mekton Zeta.css
+++ b/Mekton Z/Mekton Zeta.css
@@ -913,7 +913,33 @@ input.sheet-radio1[type="radio"]:checked + span::before {
     content: "3";
 }
 input.sheet-radio1[type="radio"]:focus {outline:0;} 
-/*----  general ----*/
+
+/*----  roll templates  ----*/
+/*----  skill general  ----*/
+.sheet-rolltemplate-skill-general .inlinerollresult  {
+    display: inline-block;
+    min-width: 1.2em;
+    text-align: center;
+    border: 1px solid black; 
+    background:transparent;
+}
+
+.sheet-rolltemplate-skill-general .inlinerollresult.fullcrit { border: 1px solid black; }
+.sheet-rolltemplate-skill-general .inlinerollresult.fullfail { border: 1px solid black; }
+.sheet-rolltemplate-skill-general .inlinerollresult.importantroll { border: 1px solid black; }
+
+.sheet-rolltemplate-skill-general .sheet-no_border .inlinerollresult {
+    display: inline-block;
+    min-width: 1.5em;
+    border: 2px solid transparent; 
+    background:transparent;
+    font-weight:400;
+}
+.sheet-rolltemplate-skill-general .sheet-tcat {
+    color: black;
+    font-weight:bold;
+}
+
 .sheet-rolltemplate-skill-general table {
     width: 100%;
     background: white;
@@ -923,6 +949,11 @@ input.sheet-radio1[type="radio"]:focus {outline:0;}
     font-family: "Contrail One", sans-serif;
     box-shadow: -5px -5px 5px black;
     color: black;
+}
+
+.sheet-rolltemplate-skill-general td {
+    padding: 0px;
+    text-align:center;
 }
 
 .sheet-rolltemplate-skill-general th {
@@ -939,16 +970,9 @@ input.sheet-radio1[type="radio"]:focus {outline:0;}
     box-shadow: inset 5px 0px 20px 0px black, inset -5px 0px 20px 0px black;
 }
 
-.sheet-rolltemplate-skill-general .sheet-tcat {
-    font-weight: bold;
-}
-
-.sheet-rolltemplate-skill-general td {
-    padding: 0px;
-    text-align:center;
-}
-
-.sheet-rolltemplate-skill-general .inlinerollresult  {
+/*----  quick mecha weapon ----*/
+/*----  Happy to take input on how to avoid the duplication of these CSS rules! ----*/
+.sheet-rolltemplate-quick-mecha-weapon .inlinerollresult  {
     display: inline-block;
     min-width: 1.2em;
     text-align: center;
@@ -956,18 +980,194 @@ input.sheet-radio1[type="radio"]:focus {outline:0;}
     background:transparent;
 }
 
-.sheet-rolltemplate-skill-general .inlinerollresult.fullfail {
-    border: 1px solid black;
-}
+.sheet-rolltemplate-quick-mecha-weapon .inlinerollresult.fullcrit { border: 1px solid black; }
+.sheet-rolltemplate-quick-mecha-weapon .inlinerollresult.fullfail { border: 1px solid black; }
+.sheet-rolltemplate-quick-mecha-weapon .inlinerollresult.importantroll { border: 1px solid black; }
 
-.sheet-rolltemplate-skill-general .inlinerollresult.importantroll {
-	border: 1px solid black;
-}
-
-.sheet-rolltemplate-skill-general .sheet-no_border .inlinerollresult {
+.sheet-rolltemplate-quick-mecha-weapon .sheet-no_border .inlinerollresult {
     display: inline-block;
     min-width: 1.5em;
     border: 2px solid transparent; 
     background:transparent;
     font-weight:400;
+}
+.sheet-rolltemplate-quick-mecha-weapon .sheet-tcat {
+    color: black;
+    font-weight:bold;
+    text-align: right;
+    width: 50%;
+}
+
+.sheet-rolltemplate-quick-mecha-weapon table {
+    width: 100%;
+    background: white;
+    border: 3px ridge gray;
+    color: black;
+    font-size: 0.9em;
+    font-family: "Contrail One", sans-serif;
+    box-shadow: -5px -5px 5px black;
+    color: black;
+}
+
+.sheet-rolltemplate-quick-mecha-weapon td {
+    padding: 0px;
+    text-align:center;
+}
+
+.sheet-rolltemplate-quick-mecha-weapon th {
+    color: white;
+    padding: 4px;
+    line-height: 1.4em;
+    font-size: 1.2em;
+    width: 100%;
+    height: 100%;
+    border-spacing: 0;
+    text-shadow: 0px 0px 5px black, 0px 0px 5px black, 0px 0px 5px black;
+    
+    background: #B02F32; /* Old browsers */
+    box-shadow: inset 5px 0px 20px 0px black, inset -5px 0px 20px 0px black;
+}
+
+.sheet-rolltemplate-quick-mecha-weapon .sheet-description {
+    color:gray;
+    line-height:0.9em;
+    font-family:"Arial";
+    font-size:0.8em;
+    font-weight:normal;
+    padding: 4px;
+    text-align:left;
+}
+
+/*----  projectile mecha weapon  ----*/
+.sheet-rolltemplate-projectile-mecha-weapon .inlinerollresult  {
+    display: inline-block;
+    min-width: 1.2em;
+    text-align: center;
+    border: 1px solid black; 
+    background:transparent;
+}
+
+.sheet-rolltemplate-projectile-mecha-weapon .inlinerollresult.fullcrit { border: 1px solid black; }
+.sheet-rolltemplate-projectile-mecha-weapon .inlinerollresult.fullfail { border: 1px solid black; }
+.sheet-rolltemplate-projectile-mecha-weapon .inlinerollresult.importantroll { border: 1px solid black; }
+
+.sheet-rolltemplate-projectile-mecha-weapon .sheet-no_border .inlinerollresult {
+    display: inline-block;
+    min-width: 1.5em;
+    border: 2px solid transparent; 
+    background:transparent;
+    font-weight:400;
+}
+.sheet-rolltemplate-projectile-mecha-weapon .sheet-tcat {
+    color: black;
+    font-weight:bold;
+    text-align: right;
+    width: 50%;
+}
+
+.sheet-rolltemplate-projectile-mecha-weapon table {
+    width: 100%;
+    background: white;
+    border: 3px ridge gray;
+    color: black;
+    font-size: 0.9em;
+    font-family: "Contrail One", sans-serif;
+    box-shadow: -5px -5px 5px black;
+    color: black;
+}
+
+.sheet-rolltemplate-projectile-mecha-weapon td {
+    padding: 0px;
+    text-align:center;
+}
+
+.sheet-rolltemplate-projectile-mecha-weapon th {
+    color: white;
+    padding: 4px;
+    line-height: 1.4em;
+    font-size: 1.2em;
+    width: 100%;
+    height: 100%;
+    border-spacing: 0;
+    text-shadow: 0px 0px 5px black, 0px 0px 5px black, 0px 0px 5px black;
+    
+    background: #B02F32; /* Old browsers */
+    box-shadow: inset 5px 0px 20px 0px black, inset -5px 0px 20px 0px black;
+}
+
+.sheet-rolltemplate-projectile-mecha-weapon .sheet-description {
+    color:gray;
+    line-height:0.9em;
+    font-family:"Arial";
+    font-size:0.8em;
+    font-weight:normal;
+    padding: 4px;
+    text-align:left;
+}
+
+/*----  melee mecha weapon  ----*/
+.sheet-rolltemplate-melee-mecha-weapon .inlinerollresult  {
+    display: inline-block;
+    min-width: 1.2em;
+    text-align: center;
+    border: 1px solid black; 
+    background:transparent;
+}
+
+.sheet-rolltemplate-melee-mecha-weapon .inlinerollresult.fullcrit { border: 1px solid black; }
+.sheet-rolltemplate-melee-mecha-weapon .inlinerollresult.fullfail { border: 1px solid black; }
+.sheet-rolltemplate-melee-mecha-weapon .inlinerollresult.importantroll { border: 1px solid black; }
+
+.sheet-rolltemplate-melee-mecha-weapon .sheet-no_border .inlinerollresult {
+    display: inline-block;
+    min-width: 1.5em;
+    border: 2px solid transparent; 
+    background:transparent;
+    font-weight:400;
+}
+.sheet-rolltemplate-melee-mecha-weapon .sheet-tcat {
+    color: black;
+    font-weight:bold;
+    text-align: right;
+    width: 50%;
+}
+
+.sheet-rolltemplate-melee-mecha-weapon table {
+    width: 100%;
+    background: white;
+    border: 3px ridge gray;
+    color: black;
+    font-size: 0.9em;
+    font-family: "Contrail One", sans-serif;
+    box-shadow: -5px -5px 5px black;
+    color: black;
+}
+
+.sheet-rolltemplate-melee-mecha-weapon td {
+    padding: 0px;
+    text-align:center;
+}
+
+.sheet-rolltemplate-melee-mecha-weapon th {
+    color: white;
+    padding: 4px;
+    line-height: 1.4em;
+    font-size: 1.2em;
+    width: 100%;
+    height: 100%;
+    border-spacing: 0;
+    text-shadow: 0px 0px 5px black, 0px 0px 5px black, 0px 0px 5px black;
+    
+    background: #B02F32; /* Old browsers */
+    box-shadow: inset 5px 0px 20px 0px black, inset -5px 0px 20px 0px black;
+}
+
+.sheet-rolltemplate-melee-mecha-weapon .sheet-description {
+    color:gray;
+    line-height:0.9em;
+    font-family:"Arial";
+    font-size:0.8em;
+    font-weight:normal;
+    padding: 4px;
+    text-align:left;
 }
