NPC sheet started & done for now

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -11,6 +11,7 @@ h1 {
   color: #FFF;
   letter-spacing: 0.0625em;
   z-index: 0;
+  text-transform: uppercase;
 }
 
 hr {
@@ -127,7 +128,7 @@ div.sheet-column-header {
 }
 
 .sheet-equal {
-  margin: 4px 1px 0 1px;
+  margin    : 4px 1px 0 1px;
   text-align: center;
 }
 
@@ -139,7 +140,7 @@ div.sheet-column-header {
 /* TABNS */
 div.sheet-grid-tabs {
   display              : grid;
-  grid-template-columns: 1fr 1fr 1fr 20fr;
+  grid-template-columns: 8em 8em 25em 8em 8em;
   grid-gap             : 1%;
 }
 
@@ -155,12 +156,16 @@ div.sheet-grid-tabs button[title="Ark"] {
   grid-column: 2;
 }
 
-div.sheet-grid-tabs button[title="Log"] {
+div.sheet-grid-tabs img[alt="Mutant Year Zero"] {
   grid-column: 3;
 }
 
-div.sheet-grid-tabs img[alt="Mutant Year Zero"] {
+div.sheet-grid-tabs button[title="Log"] {
   grid-column: 4;
+}
+
+div.sheet-grid-tabs button[title="NPC"] {
+  grid-column: 5;
 }
 
 /* Hide actual radio */
@@ -303,12 +308,12 @@ button {
     margin        : 1%;
     text-transform: capitalize;
     vertical-align: middle;
-  }
-
+}
 
 input.sheet-tab[value="character"] ~ button[name="act_tab_character"],
 input.sheet-tab[value="ark"] ~ button[name="act_tab_ark"],
 input.sheet-tab[value="log"] ~ button[name="act_tab_log"],
+input.sheet-tab[value="npc"] ~ button[name="act_tab_npc"],
 button:hover {
     color           : #fcd67b;
     background-color: #8c4110;
@@ -329,7 +334,8 @@ div.sheet-wrapper {
 
 img[alt="Mutant Year Zero"] {
   height     : 8em;
-  margin-left: 15%;
+  padding: 1% 10%;
+  margin-bottom: 1%;
 }
 
 input {
@@ -397,16 +403,15 @@ div.sheet-relationships-grid input[type="text"] {
   text-align: left;
 }
 
-
 /* hide/show areas */
 .sheet-expand {
-    opacity: 0;
+  opacity: 0;
   position: absolute;
   top: -8px;
   left: -4px;
   width: 18px;
   height: 18px;
-    z-index: 6;
+  z-index: 6;
 }
 
 button.sheet-toggles {
@@ -909,7 +914,7 @@ div.sheet-weapons-box {
 
 
 div.sheet-weapons-grid {
-  grid-template-columns: 1fr 6fr 2fr 2fr 2fr 2fr 9fr;
+  grid-template-columns: 1.5fr 6fr 2fr 2fr 2fr 2fr 9fr;
   padding: 0 0 2px 0;
 }
 
@@ -2436,12 +2441,6 @@ div.sheet-dots input[type="radio"]:checked ~ input[type="radio"] + span {
    color           : #2d281d;
 }
 
-/*
-div.sheet-rot-grid div.sheet-dots input[name="attr_rot_permenant"][value="0"] ~ span {
-  color: #fff;
-}
-*/
-
 div.sheet-rot-grid input[type="number"].sheet-input-number {
   width: 4em;
 }
@@ -2502,6 +2501,162 @@ div.sheet-rot-grid label[title="permaneant rot"] > span {
   button.sheet-collapse[type="action"]:hover {
     color: #c77624;
   }
+
+/* NPC Settings */
+/*input.sheet-tab[value="npc"] ~ div.sheet-npc {
+  display: inline-flex;
+}*/
+
+div.sheet-npc {
+  margin-bottom : 2%;
+  padding-bottom: 0em;
+}
+
+div.sheet-npc h2 {
+  font-size     : 1.5em;
+  font-variant  : small-caps;
+  line-height   : 1em;
+  text-transform: capitalize;
+}
+
+div.sheet-npc h3 {
+  font-size : 1.2em;
+  text-align: center;
+}
+
+div.sheet-npc h3[title="npc current attribute"] {
+  grid-column: 2;
+}
+
+div.sheet-npc h3[title="npc maximum attribute"] {
+  grid-column: 3;
+}
+
+
+div.sheet-npc textarea {
+  width: 97%;
+}
+
+div.sheet-npc div.sheet-npc-info div:nth-of-type(1n+3) {
+  width: 100%;
+}
+
+div.sheet-npc div.sheet-npc-flex {
+  background-color: hsl(165, 18%, 96%);
+}
+
+input.sheet-tab[value="npc"] ~  div.sheet-npc,
+input.sheet-tab[value="npc"] ~ div.sheet-character {
+    align-items     : flex-start;
+    display         : inline-flex;
+    flex-direction  : row;
+    flex-wrap       : wrap;
+    justify-content : flex-start;
+    max-width       : 100%;
+    min-width       : 300px;
+    width           : 40%;
+}
+
+div.sheet-npc input[name="attr_know_modifier"] {
+  background-color: hsl(41, 64%, 63%);
+  border          : 0.4em solid hsl(17, 58%, 39%);
+  height          : 4em;
+  width           : 4em;
+  border-radius   : 10em;
+  color           : #000;
+  font-size       : 1.1em;
+  font-weight     : bolder;
+}
+
+div.sheet-npc div.sheet-wrapper {
+  padding-bottom: 0em;
+  padding-top   : 0em;
+}
+
+input.sheet-tab[value="npc"] ~ div.sheet-grid-tabs button[name="act_tab_ark"],
+input.sheet-tab[value="npc"] ~ div.sheet-grid-tabs button[name="act_tab_log"] {
+  display: none;
+}
+
+input.sheet-tab[value="npc"] ~ div.sheet-grid-tabs {
+  grid-template-columns: 8em 25em 8em;
+}
+
+input.sheet-tab[value="npc"] ~ div.sheet-grid-tabs img[alt="Mutant Year Zero"] {
+  grid-column: 2;
+}
+
+input.sheet-tab[value="npc"] ~ div.sheet-grid-tabs button[name="act_tab_npc"] {
+  grid-column: 3;
+}
+
+div.sheet-npc-name-grid {
+  grid-template-columns: 5fr 1fr;
+  margin-bottom        : 5%;
+  margin-top           : 1%;
+}
+
+div.sheet-npc-name-grid input[name="attr_character_name"] {
+  grid-column: 1;
+  grid-row   : 1;
+  margin-top : 5%;
+}
+
+div.sheet-npc-name-grid input[name="attr_know_modifier"] {
+  grid-column: 2;
+  grid-row   : 1;
+}
+
+div.sheet-npc-name-grid textarea {
+  grid-column: 1 / 3;
+  grid-row   : 2;
+}
+
+div.sheet-npc-attr-grid {
+  grid-template-columns: 12em 1fr 1fr;
+  width: 100%;
+}
+
+div.sheet-npc-attr-grid label {
+  grid-column: 1;
+  width      : 6em;
+}
+
+div.sheet-npc input[name="attr_name"] {
+  margin-bottom: 2%;
+  margin-top   : 1%;
+}
+
+input.sheet-tab[value="npc"] ~ div.sheet-character {
+  display: inline-flex;
+  vertical-align: top;
+}
+
+input.sheet-tab[value="npc"] ~ div.sheet-character div.sheet-pc-only {
+  display: none;
+}
+
+input.sheet-tab[value="npc"] ~ div.sheet-character div.sheet-character-row div.sheet-character-dice_pool {
+  background    : hsl(165, 20%, 96%);
+  margin-top    : -0.5em;
+  vertical-align: top;
+}
+
+input.sheet-tab[value="npc"] ~ div.sheet-character div.sheet-character-row div.sheet-two-col-left {
+  width: 85%;
+}
+
+input.sheet-tab[value="npc"] ~ div.sheet-character div.sheet-character-row div.sheet-two-col-left div.sheet-2grid {
+  grid-template-columns: 1fr;
+}
+
+input.sheet-tab[value="npc"] ~ div.sheet-wrapper {
+  padding-top: 0em;
+}
+
+input.sheet-tab[value="npc"] ~ div.sheet-tab-content {
+  margin-top: 0em;
+}
 
 /* Add Backgrounds to Headers */
 div.sheet-attributes-grid.sheet-header {
