add rot point biohazard

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -2461,6 +2461,24 @@ div.sheet-rot-grid label[title="permaneant rot"] > span {
   text-transform: capitalize;
 }
 
+div.sheet-rot-grid div.sheet-dots span {
+  content: url('http://imgsrv.roll20.net/?src=raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%2520Year%2520Zero/images/biohazard.png');
+}
+
+input[name="attr_rot_permenant"][value="0"] ~ input:nth-of-type(1n+1) + span,
+input[name="attr_rot_permenant"][value="1"] ~ input:nth-of-type(1n+4) + span,
+input[name="attr_rot_permenant"][value="2"] ~ input:nth-of-type(1n+5) + span,
+input[name="attr_rot_permenant"][value="3"] ~ input:nth-of-type(1n+6) + span,
+input[name="attr_rot_permenant"][value="4"] ~ input:nth-of-type(1n+7) + span,
+input[name="attr_rot_permenant"][value="5"] ~ input:nth-of-type(1n+8) + span,
+input[name="attr_rot_permenant"][value="6"] ~ input:nth-of-type(1n+9) + span,
+input[name="attr_rot_permenant"][value="7"] ~ input:nth-of-type(1n+10) + span,
+input[name="attr_rot_permenant"][value="8"] ~ input:nth-of-type(1n+11) + span,
+input[name="attr_rot_permenant"][value="9"] ~ input:nth-of-type(1n+12) + span,
+input[name="attr_rot_permenant"][value="10"] ~ input:nth-of-type(1n+13) + span {
+  content: "";
+}
+
   /***** COLLAPSABLE DIVS *****/
   button.sheet-dicefontd6 {
     font-family: "dicefontd6";
