--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -2511,9 +2511,10 @@ input[name="attr_rot_permenant"][value="10"] ~ input:nth-of-type(1n+13) + span {
   button.sheet-collapse[type="action"] {
     background : none;
     border     : none;
+    box-shadow : none;
+    font-size  : 1.2em;
     font-weight: bold;
     text-align : left;
-    box-shadow : none;
   }
 
   button.sheet-collapse[type="action"]:hover {
@@ -2571,7 +2572,7 @@ input.sheet-tab[value="npc"] ~ div.sheet-character {
     flex-wrap       : wrap;
     justify-content : flex-start;
     max-width       : 100%;
-    min-width       : 300px;
+    min-width       : 350px;
     width           : 40%;
 }
 
@@ -2633,6 +2634,13 @@ div.sheet-npc-name-grid textarea {
 div.sheet-npc-attr-grid {
   grid-template-columns: 12em 1fr 1fr;
   width: 100%;
+}
+
+div.sheet-npc-attr-grid input[type="number"] {
+  margin    : 1% 10%;
+  padding   : 5%;
+  text-align: center;
+  width     : 5em;
 }
 
 div.sheet-npc-attr-grid label {
