[Fix] CSS rolltemplate-default for chrome

--- a/Naheulbeuk/Naheulbeuk.css
+++ b/Naheulbeuk/Naheulbeuk.css
@@ -861,9 +861,11 @@ div.sheet-reparation-impossible {
 	}
 	.sheet-rolltemplate-default td:first-child {
 		min-width: 1%;
+		width: 1%;
 		background: linear-gradient(to right,#c3996b7a,#fff);
 		color: #766344;
 		text-align: left;
+		white-space: nowrap;
 	}
 	.sheet-rolltemplate-default td.sheet-td-noFirst {
 		text-align:left!important;
