D&D5E Italian CSS - UC-76 (#5264)
* uc-76:DnD5e italian visual fix

* uc76: fix spellcasting main info block

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -3682,7 +3682,41 @@ span.sheet-spellconcentration
     width: 28px;
 }
 
+/* Italian */
+.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-core,
+.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-core + span {
+    right: 146px;
+    width: 60px;
+}
 
+.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-bio,
+.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-bio + span {
+    right: 113px;
+    width: 30px;
+}
+
+.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-spells,
+.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-spells + span {
+    right: 20px;
+    width: 90px;
+}
+
+.charsheet.lang-it div.sheet-licensecontainer .sheet-container.sheet-pc .sheet-spells .sheet-header .sheet-header-info .sheet-part {
+    width: 23%;
+}
+
+.charsheet.lang-it div.sheet-licensecontainer .sheet-container:not(.sheet-npc) div.sheet-page div.sheet-header div.sheet-name-container span {
+    margin-top: 19px;
+    margin-left: 30px;
+}
+
+.charsheet.lang-it .sheet-header .sheet-part input[type="text"], .charsheet .sheet-header .sheet-part select {
+    height: 46px;
+}
+
+.charsheet.lang-it .sheet-header .sheet-part span.sheet-display {
+    height: 46px;
+}
 
 /*******************
  * CHARACTERMANCER *
