--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -548,7 +548,7 @@ input.sheet-tab0 + span {
 
 /*  NOTEBOX */
 .sheet-row-details.sheet-notebox {
-    height: 90px;
+    height: 120px;
 }
 
 .sheet-row-details.sheet-notebox div.sheet-col-notebox {
@@ -844,7 +844,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
     color: #404040;
 }
 
-.sheet-stats { width: 180px; }
+.sheet-stats { width: 180px; height: 489px;}
 .sheet-stats input { font-size: 13px;}
 .sheet-stats .sheet-header .sheet-col0 { width: 72px; }
 .sheet-stats .sheet-header .sheet-col1 { width: 41px; }
@@ -898,7 +898,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 }
 .sheet-general-notes-box .sheet-cell-col-100 textarea { 
     width: 100%;
-    height: 160px;
+    height: 253px;
     padding: 0;
     margin: 0;
 }
