--- a/RWBY_RoC-Unofficial_Tabletop_RPG/RWBY-UnofficialTabletopRPG.css
+++ b/RWBY_RoC-Unofficial_Tabletop_RPG/RWBY-UnofficialTabletopRPG.css
@@ -63,21 +63,44 @@ border: 0px;
 
 /* ===== Info =====*/
 .sheet-col-inf {
-width: 100px ; 
-text-align: center ; 
+width: 60px ; 
+text-align: right ; 
 padding: 5px 0px 0px 2px; 
 display: inline;
 font-weight: bold ; 
-Font-family: monospace, sans-serif ; 
-font-size: 1.1em ;
+Font-family: sans-serif; 
+font-size: 1em ;
 }
 
 .sheet-col-it {
-width: 80px ; 
 text-align: center ; 
-margin: 1px 0px 0px 0px; 
+margin: 0px 0px 0px 0px; 
 padding: 0px;
 display: inline;
+}
+
+.sheet-57 {
+width: 65px; 
+margin: 1px 0px 0px 0px; 
+font-weight: bold; 
+Font-family: sans-serif; 
+font-size: 0.9em ;
+}
+
+.sheet-53 {
+width: 53px; 
+margin: 0px 0px 0px 0px; 
+font-weight: bold; 
+Font-family: sans-serif; 
+font-size: 0.9em ;
+}
+
+.sheet-82 {
+width:102px; 
+margin: 1px 0px 0px 0px; 
+font-weight: bold; 
+Font-family: sans-serif; 
+font-size: 0.9em ;
 }
 
 /* ===== Defenses ===== */
@@ -111,27 +134,14 @@ position: relative;
 top: 5px;
 }
 
-
-.sheet-col-wv2 {
-width: 110px ; 
-text-align: center ; 
-padding: 7px ; 
-font-weight: bold ; 
-Font-family: monospace, sans-serif ; 
-font-size: 0.9em ;
-display: inline;
-position: relative;
-top: 5px;
-}
-
 .sheet-col-wv3 {
 width: 100px ; 
 height: 30px;
 text-align: justify ; 
 padding: 5px; 
 font-weight: bold ; 
-Font-family: monospace, sans-serif ; 
-font-size: 0.9em ;
+Font-family: monospace, ; 
+font-size: 0.8em ;
 display: inline;
 position: relative;
 top: 5px;
@@ -141,10 +151,10 @@ top: 5px;
 width: 115px ; 
 height: 30px;
 text-align: justify ; 
-padding: 5px 0px 5px 5px; 
+padding: 5px 4px 5px 5px; 
 font-weight: bold ; 
-Font-family: monospace, sans-serif ; 
-font-size: 0.9em ;
+Font-family: monospace, ; 
+font-size: 0.85em ;
 display: inline;
 position: relative;
 top: 5px;
@@ -156,47 +166,93 @@ height: 30px;
 text-align: justify ; 
 padding: 5px 0px 5px 4px; 
 font-weight: bold ; 
-Font-family: monospace, sans-serif ; 
-font-size: 0.9em ;
+Font-family: monospace, ; 
+font-size: 0.85em ;
 display: inline;
 position: relative;
 top: 5px;
+}
+
+.sheet-col-wMvA {
+width: 100px ; 
+height: 30px;
+text-align: justify ; 
+padding: 5px 6px 5px 5px; 
+font-weight: bold ; 
+Font-family: monospace, ; 
+font-size: 0.85em ;
+display: inline;
+position: relative;
+top: 5px;
+}
+
+.sheet-col-wMvB {
+    padding: 1px;
+    width: 22px; 
+    margin-right: -5px; 
+    margin-left: 2px;
+    display: inline;
+    position: relative; 
+    top: 3px;
+}
+
+.sheet-acc-bonus {
+padding-left: 0px; 
+padding-top: 3px; 
+padding-right: 0px; 
+letter-spacing: -1px;
+background-color: transparent; 
+border: none; font-size: 1.1em; 
+font-family: monospace, sans-serif; 
+font-weight: bold; 
+text-align: center; 
+width: 12px !important;
 }
 
 .sheet-col-wMvD {
 width: 115px ; 
 height: 30px;
 text-align: justify ; 
-padding: 5px 0px 5px 5px; 
+padding: 5px 2px 5px 0px; 
 font-weight: bold ; 
-Font-family: monospace, sans-serif ; 
-font-size: 0.9em ;
+Font-family: monospace, ; 
+font-size: 0.85em ;
 display: inline;
 position: relative;
 top: 5px;
-left: 7px;
+left: 5px;
 }
 
 .sheet-col-wRvA {
 width: 86px ; 
 height: 30px;
 text-align: left ; 
-padding: 5px 5px 5px 0px; 
+padding: 5px 3px 5px 0px; 
 font-weight: bold ; 
-Font-family: monospace, sans-serif ; 
-font-size: 0.9em ;
+Font-family: monospace, ; 
+font-size: 0.85em ;
 display: inline;
 position: relative;
 top: 5px;
 }
 
+.sheet-col-wRvB {
+    padding: 1px;
+    width: 22px; 
+    margin-right: -5px; 
+    margin-left: -4px;
+    display: inline;
+    position: relative; 
+    top: 3px;
+}
+
 .sheet-col-wRvD { 
 height: 30px;
 text-align: left ; 
-padding: 5px 0px 5px 4px; 
+padding: 5px 1px 5px 4px; 
 font-weight: bold ; 
-Font-family: monospace, sans-serif ; 
-font-size: 0.9em ;
+Font-family: monospace, ; 
+font-size: 0.85em ;
 display: inline;
 position: relative;
 top: 5px;
@@ -211,7 +267,7 @@ height: 100px;
 
 textarea {
 height: 65px;
-width: 460px;
+width: 455px;
 margin: 1px;
 font-family: sans-serif;
 }
@@ -234,8 +290,8 @@ font-family: sans-serif;
     text-align: justify ; 
     padding: 5px; 
     font-weight: bold ; 
-    Font-family: monospace, sans-serif ; 
-    font-size: 0.9em ;
+    Font-family: monospace, ; 
+    font-size: 0.8em ;
     display: inline;
     position: relative;
     top: 5px;
@@ -246,8 +302,8 @@ font-family: sans-serif;
     text-align: justify ; 
     padding: 5px; 
     font-weight: bold ; 
-    Font-family: monospace, sans-serif ; 
-    font-size: 0.9em ;
+    Font-family: monospace, ; 
+    font-size: 0.8em ;
     display: inline;
     position: relative;
     top: 5px;
@@ -260,8 +316,8 @@ font-family: sans-serif;
     text-align: justify ; 
     padding: 5px; 
     font-weight: bold ; 
-    Font-family: monospace, sans-serif ; 
-    font-size: 0.9em ;
+    Font-family: monospace, ; 
+    font-size: 0.8em ;
     display: inline;
     position: relative;
     top: 5px;
@@ -273,8 +329,8 @@ font-family: sans-serif;
     text-align: justify ; 
     padding: 5px; 
     font-weight: bold ; 
-    Font-family: monospace, sans-serif ; 
-    font-size: 0.9em ;
+    Font-family: monospace, ; 
+    font-size: 0.8em ;
     display: inline;
     position: relative;
     top: 5px;
@@ -284,16 +340,16 @@ font-family: sans-serif;
 
 .sheet-col-af {
     height: 30px;
-    text-align: left ; 
     padding: 5px; 
     font-weight: bold ; 
-    Font-family: monospace, sans-serif ; 
-    font-size: 0.9em ;
+    Font-family: monospace, ; 
+    font-size: 0.8em ;
     display: inline;
     position: relative;
     top: 5px;
     width: 90px;
     margin-right: -8px;
+    text-align: justify ;
 }
 
 .sheet-col-afb {
@@ -302,6 +358,33 @@ font-family: sans-serif;
     margin-right: -5px; 
     margin-left: -4px;
     display: inline;
+}
+
+/* ===== Semblance ===== */
+
+.sheet-col-sem {
+height: 30px;
+text-align: left ; 
+padding: 5px; 
+font-weight: bold ; 
+Font-family: monospace, sans-serif;
+font-size: 1em ;
+display: inline;
+position: relative;
+top: 5px;
+}
+
+.sheet-col-sem-desc {
+height: 30px;
+text-align: left ; 
+padding: 5px; 
+font-weight: bold ; 
+Font-family: monospace, sans-serif;
+font-size: 1em ;
+display: inline;
+position: relative;
+top: 5px;
+width: 358px;
 }
 
 /* ===== INPUTS ===== */
@@ -324,7 +407,7 @@ input[type=number].sheet-roc::-webkit-outer-spin-button {
     width: 0.8em;
     z-index: 5;
     opacity: 0.5;
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/RWBY_RoC-Unofficial_Tabletop_RPG/webkit.jpg') center center;
+    background: url('https://github.com/Roll20/roll20-character-sheets/blob/master/RWBY_RoC-Unofficial_Tabletop_RPG/webkit.jpg?raw=true') center center;
     
 }
 input[type="number"].sheet-roc::-webkit-inner-spin-button:hover,
@@ -365,10 +448,10 @@ input[type=number].sheet-roc {
 .sheet-popup {
     width: 30px ; 
 text-align: center ; 
-padding: 2px ; 
+padding: 5px 2px 5px 2px; 
 font-weight: bold ; 
-Font-family: monospace, sans-serif ; 
-font-size: 1.1em ;
+Font-family: monospace, ; 
+font-size: 0.9em ;
 }
 
 .sheet-popup + .sheet-tooltip {
@@ -441,6 +524,47 @@ font-size: 1.1em ;
     box-shadow: 3px #CCC;
 }
 
+
+.sheet-popup-def {
+    width: 30px ; 
+text-align: center ; 
+padding: 2px ; 
+font-weight: bold ; 
+Font-family: monospace, ; 
+font-size: 0.9em ;
+}
+
+.sheet-popup-def + .sheet-tooltip {
+    z-index: 10;
+    display: none;
+    padding: 4px;
+    text-align: left;
+    margin-left: 0px;
+    font-weight: normal;
+    text-transform: initial;
+    font-variant: initial;
+}
+
+.sheet-popup-def:hover + .sheet-tooltip {
+    width: auto;
+    display: inline;
+    position: absolute;
+    color: #111;
+    border: 1px solid gray;
+    background: #ffffff;
+    line-height: 1.5em;
+}
+
+.sheet-popup-def + .sheet-tooltip {
+    border-radius: 1px;
+    -moz-border-radius: 1px;
+    -webkit-border-radius: 1px;
+    -moz-box-shadow: 3px #CCC;
+    -webkit-box-shadow: 3px #CCC;
+    box-shadow: 3px #CCC;
+}
+
+
 .sheet-popup-semblance {
     width: 25px ; 
 text-align: center ; 
@@ -481,6 +605,57 @@ font-size: 1.1em ;
     -webkit-box-shadow: 3px #CCC;
     box-shadow: 3px #CCC;
 }
+
+
+.sheet-popup-skill {
+width: 30px ; 
+text-align: center ; 
+padding: 5px 2px 5px 2px; 
+font-weight: bold ; 
+Font-family: sans-serif;
+font-size: 0.85em; 
+display: inline;
+}
+.sheet-popup-skill-stat {
+width: 80px ; 
+text-align: center ; 
+padding: 5px 2px 5px 2px; 
+font-weight: bold ; 
+Font-family: monospace;
+font-size: 0.85em; 
+display: inline;
+}
+
+.sheet-popup-skill + .sheet-tooltip {
+    z-index: 10;
+    display: none;
+    padding: 4px;
+    text-align: left;
+    margin-left: 0px;
+    font-weight: normal;
+    text-transform: initial;
+    font-variant: initial;
+}
+
+.sheet-popup-skill:hover + .sheet-tooltip {
+    width: auto;
+    display: inline;
+    position: absolute;
+    color: #111;
+    border: 1px solid gray;
+    background: #ffffff;
+    line-height: 1.5em;
+}
+
+.sheet-popup-skill + .sheet-tooltip {
+    border-radius: 1px;
+    -moz-border-radius: 1px;
+    -webkit-border-radius: 1px;
+    -moz-box-shadow: 3px #CCC;
+    -webkit-box-shadow: 3px #CCC;
+    box-shadow: 3px #CCC;
+}
+
 
 .sheet-defense + .sheet-tooltip {
     z-index: 10;
