--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -817,7 +817,8 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-attribute .sheet-row-swing-damage .sheet-col1 { width: 90px; }
 .sheet-attribute .sheet-row .sheet-col-move-label { width: 145px; }
 .sheet-attribute .sheet-row .sheet-col-move-value { width: 35px; }
-.sheet-main-attribute .sheet-row { height: 35px; }
+.sheet-main-attribute .sheet-row { height: 30px; }
+.sheet-main-attribute .sheet-row-health { height: 25px; }
 .sheet-main-attribute .sheet-row .sheet-col0 { font-size: 20px; }
 .sheet-main-attribute .sheet-row .sheet-col1 input { font-size: 20px; }
 
@@ -850,7 +851,10 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-stats .sheet-header .sheet-col1 { width: 41px; }
 .sheet-stats .sheet-header .sheet-col2 { width: 30px; }
 .sheet-stats .sheet-header .sheet-col3 { width: 37px; }
-.sheet-stats .sheet-row { font-size: 13px; height: 31px; }
+.sheet-stats .sheet-row { font-size: 13px; }
+.sheet-stats .sheet-row.sheet-hr { 
+    margin-top: 10px; 
+}
 .sheet-stats .sheet-row .sheet-col0 { width: 75px; }
 .sheet-stats .sheet-row .sheet-col0 input { text-align:left; }
 .sheet-stats .sheet-row .sheet-col1 { width: 35px; }
@@ -863,6 +867,11 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-stats .sheet-cell {
     margin: auto;
     padding: 0.2em;
+}
+
+.sheet-stats .sheet-custom-pools .sheet-popup {
+    text-align: center;
+    font-weight: bold;
 }
 
 .sheet-miscelleneous { 
@@ -955,6 +964,67 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 }
 .sheet-encumberance .sheet-row-load .sheet-cell { margin-top: 11px; }
 .sheet-encumberance .sheet-row-load input { font-size: 18px; font-weight: bold; }
+
+/* Movement Feats area */
+.sheet-movement-feats { width: calc(100% - 180px - 100px - 1.2em); }
+
+.sheet-movement-feats .sheet-header {
+    background: #D3E5F5;
+    margin-bottom: 5px;
+    border-bottom: 1px solid black;
+}
+
+.sheet-movement-feats .sheet-colToggle { position: relative;}
+.sheet-movement-feats .sheet-col0 { width: 100px; }
+.sheet-movement-feats .sheet-col1 { width: calc((100% - 100px) * 0.4); }
+.sheet-movement-feats .sheet-colAll { width: calc((100% - 100px) * 0.166); }
+.sheet-movement-feats .sheet-col2 { width: calc((100% - 100px) * 0.3); }
+.sheet-movement-feats .sheet-col3 { width: calc((100% - 100px) * 0.3); }
+.sheet-movement-feats .sheet-row-load { 
+    height: 40px;
+    font-size: 18px;
+    font-weight: bold;
+}
+.sheet-movement-feats .sheet-row-load .sheet-cell { margin-top: 11px; }
+.sheet-movement-feats .sheet-row-load input { font-size: 18px; font-weight: bold; }
+
+.sheet-container-feats {
+    float: left;
+    width: 100%;
+}
+
+.sheet-container-feats .sheet-row .sheet-column-header { 
+    text-align: center;
+    font-weight: bold;
+    text-transform: lowercase;
+    font-variant: small-caps;
+    letter-spacing: 1px;
+    white-space: nowrap;
+    height: 22px;
+    border-bottom: 1px solid black;
+    margin-bottom: 5px;
+}
+.sheet-container-feats .sheet-row .sheet-title { text-align: center; }
+.sheet-container-feats .sheet-row .sheet-col0 { width: 50px; }
+.sheet-container-feats .sheet-row .sheet-col1 { width: 35px; }
+.sheet-container-feats .sheet-row .sheet-col2 { width: 40px; }
+.sheet-container-feats .sheet-row .sheet-col3 { width: 40px; }
+
+.sheet-container-feats .sheet-feats-child {
+    float: left;
+}
+
+.sheet-container-feats .sheet-container-flying {
+    margin-left: 10px;
+}
+
+.sheet-container-feats .sheet-container-swimming {
+    margin-left: 20px;
+}
+
+.sheet-container-feats .sheet-container-jumping {
+    margin-left: 20px;
+}
 
 .sheet-options .sheet-box {
     margin: 10px;
@@ -1085,7 +1155,8 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
     width: 421px; 
 }
 
-.sheet-bio-description .sheet-header {
+.sheet-bio-description .sheet-header,
+.sheet-encumberance .sheet-header {
     background: #f0f0f0;
     margin-bottom: 5px;
 }
@@ -1457,6 +1528,7 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
 /* -- Combat Tools: Range Calculator -- */
 .sheet-firing-up-down {
     width: calc(100% - 140px - 0.8em);
+    padding-bottom: 5px;
 }
 
 .sheet-firing-up-down .sheet-table .sheet-title {
@@ -1512,6 +1584,7 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
 /* Combat Tools: Falling and Collision */
 .sheet-falling-collision {
     width: calc(100% - 140px - 0.8em);
+    padding-bottom: 5px;
 }
 
 .sheet-falling-collision .sheet-table .sheet-title {
@@ -1871,7 +1944,6 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
     margin: 4px 0 4px 0;
     line-height: 14px;
     font-size: 11px;
-    font-style: italic;    
 }
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result .sheet-failure-text {
