--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -548,7 +548,7 @@ input.sheet-tab0 + span {
 
 /*  NOTEBOX */
 .sheet-row-details.sheet-notebox {
-    height: 90px;
+    height: 120px;
 }
 
 .sheet-row-details.sheet-notebox div.sheet-col-notebox {
@@ -646,6 +646,15 @@ input.sheet-tab0 + span {
 
 .sheet-box .sheet-toggle ~ .sheet-checkbox {
     position: absolute;
+}
+
+.sheet-box .sheet-toggle ~ .sheet-checkbox-encumbrance {
+    position: inherit;
+    float: left;
+}
+
+.sheet-box input[type="checkbox"] ~ .sheet-checkbox-encumbrance:before {
+    line-height: 18px;
 }
 
 .sheet-box .sheet-toggle:checked ~ .sheet-checkbox:before {
@@ -808,7 +817,8 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-attribute .sheet-row-swing-damage .sheet-col1 { width: 90px; }
 .sheet-attribute .sheet-row .sheet-col-move-label { width: 145px; }
 .sheet-attribute .sheet-row .sheet-col-move-value { width: 35px; }
-.sheet-main-attribute .sheet-row { height: 35px; }
+.sheet-main-attribute .sheet-row { height: 30px; }
+.sheet-main-attribute .sheet-row-health { height: 25px; }
 .sheet-main-attribute .sheet-row .sheet-col0 { font-size: 20px; }
 .sheet-main-attribute .sheet-row .sheet-col1 input { font-size: 20px; }
 
@@ -835,13 +845,16 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
     color: #404040;
 }
 
-.sheet-stats { width: 180px; }
+.sheet-stats { width: 180px; height: 489px;}
 .sheet-stats input { font-size: 13px;}
 .sheet-stats .sheet-header .sheet-col0 { width: 72px; }
 .sheet-stats .sheet-header .sheet-col1 { width: 41px; }
 .sheet-stats .sheet-header .sheet-col2 { width: 30px; }
 .sheet-stats .sheet-header .sheet-col3 { width: 37px; }
-.sheet-stats .sheet-row { font-size: 13px; height: 31px; }
+.sheet-stats .sheet-row { font-size: 13px; }
+.sheet-stats .sheet-row.sheet-hr { 
+    margin-top: 10px; 
+}
 .sheet-stats .sheet-row .sheet-col0 { width: 75px; }
 .sheet-stats .sheet-row .sheet-col0 input { text-align:left; }
 .sheet-stats .sheet-row .sheet-col1 { width: 35px; }
@@ -854,6 +867,11 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-stats .sheet-cell {
     margin: auto;
     padding: 0.2em;
+}
+
+.sheet-stats .sheet-custom-pools .sheet-popup {
+    text-align: center;
+    font-weight: bold;
 }
 
 .sheet-miscelleneous { 
@@ -889,7 +907,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 }
 .sheet-general-notes-box .sheet-cell-col-100 textarea { 
     width: 100%;
-    height: 160px;
+    height: 253px;
     padding: 0;
     margin: 0;
 }
@@ -933,6 +951,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 .sheet-lift .sheet-col1 { width: calc(100% - 180px); text-align: center; }
 
 .sheet-encumberance { width: calc(100% - 180px - 100px - 1.2em); }
+.sheet-encumberance .sheet-colToggle { position: relative;}
 .sheet-encumberance .sheet-col0 { width: 100px; }
 .sheet-encumberance .sheet-col1 { width: calc((100% - 100px) * 0.4); }
 .sheet-encumberance .sheet-colAll { width: calc((100% - 100px) * 0.166); }
@@ -946,6 +965,67 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 .sheet-encumberance .sheet-row-load .sheet-cell { margin-top: 11px; }
 .sheet-encumberance .sheet-row-load input { font-size: 18px; font-weight: bold; }
 
+/* Movement Feats area */
+.sheet-movement-feats { width: calc(100% - 180px - 100px - 1.2em); }
+
+.sheet-movement-feats .sheet-header {
+    background: #D3E5F5;
+    margin-bottom: 5px;
+    border-bottom: 1px solid black;
+}
+
+.sheet-movement-feats .sheet-colToggle { position: relative;}
+.sheet-movement-feats .sheet-col0 { width: 100px; }
+.sheet-movement-feats .sheet-col1 { width: calc((100% - 100px) * 0.4); }
+.sheet-movement-feats .sheet-colAll { width: calc((100% - 100px) * 0.166); }
+.sheet-movement-feats .sheet-col2 { width: calc((100% - 100px) * 0.3); }
+.sheet-movement-feats .sheet-col3 { width: calc((100% - 100px) * 0.3); }
+.sheet-movement-feats .sheet-row-load { 
+    height: 40px;
+    font-size: 18px;
+    font-weight: bold;
+}
+.sheet-movement-feats .sheet-row-load .sheet-cell { margin-top: 11px; }
+.sheet-movement-feats .sheet-row-load input { font-size: 18px; font-weight: bold; }
+
+.sheet-container-feats {
+    float: left;
+    width: 100%;
+}
+
+.sheet-container-feats .sheet-row .sheet-column-header { 
+    text-align: center;
+    font-weight: bold;
+    text-transform: lowercase;
+    font-variant: small-caps;
+    letter-spacing: 1px;
+    white-space: nowrap;
+    height: 22px;
+    border-bottom: 1px solid black;
+    margin-bottom: 5px;
+}
+.sheet-container-feats .sheet-row .sheet-title { text-align: center; }
+.sheet-container-feats .sheet-row .sheet-col0 { width: 50px; }
+.sheet-container-feats .sheet-row .sheet-col1 { width: 35px; }
+.sheet-container-feats .sheet-row .sheet-col2 { width: 40px; }
+.sheet-container-feats .sheet-row .sheet-col3 { width: 40px; }
+
+.sheet-container-feats .sheet-feats-child {
+    float: left;
+}
+
+.sheet-container-feats .sheet-container-flying {
+    margin-left: 10px;
+}
+
+.sheet-container-feats .sheet-container-swimming {
+    margin-left: 20px;
+}
+
+.sheet-container-feats .sheet-container-jumping {
+    margin-left: 20px;
+}
+
 .sheet-options .sheet-box {
     margin: 10px;
     padding: 2px;
@@ -953,6 +1033,16 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 
 .sheet-options .sheet-collision-falling-options textarea {
     width: 184px;
+}
+
+/* show/hide table */
+/* show/hide manual unspent box */
+input.sheet-toggle-encumbrance[type="checkbox"]:checked ~ div.sheet-encumbrance-table-body {
+    display: block;
+}
+
+input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumbrance-table-body {
+    display: none;
 }
 
 /* -- TRAITS -- */
@@ -1065,7 +1155,8 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
     width: 421px; 
 }
 
-.sheet-bio-description .sheet-header {
+.sheet-bio-description .sheet-header,
+.sheet-encumberance .sheet-header {
     background: #f0f0f0;
     margin-bottom: 5px;
 }
@@ -1163,7 +1254,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 }
 
 .sheet-background-info .sheet-row-textarea textarea {
-    height: 100px;
+    height: 121px;
     margin: 0;
     padding: 2px 0 2px 2px;
 }
@@ -1175,12 +1266,12 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 
 .sheet-background-info .sheet-row-textarea-family,
 .sheet-background-info .sheet-row-textarea-family .sheet-cell {
-    height: 96px;
+    height: 128px;
     padding-right: 5px;
 }
 
 .sheet-background-info .sheet-row-textarea-family textarea {
-    height: 90px;
+    height: 122px;
     margin: 0;
     padding: 2px 0 2px 2px;
 }
@@ -1210,16 +1301,50 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 }
 
 .sheet-misc-notes .sheet-row-textarea .sheet-cell {
-    height: 318px;
+    height: 159px;
     padding: 4px 8px 4px 4px;
 }
 
 .sheet-misc-notes .sheet-row-textarea textarea {
-    height: 304px;
+    height: 145px;
     margin: 0;
     padding: 2px 0 2px 2px;
 }
 
+/* training Notes */
+
+.sheet-training-notes { 
+    width: 421px;
+}
+
+.sheet-training-notes .sheet-header {
+    background: #f0f0f0;
+    margin-bottom: 5px;
+}
+
+.sheet-training-notes .sheet-header .sheet-col0 { 
+    width: calc(100%);
+    text-align: center;
+}
+
+.sheet-training-notes .sheet-row .sheet-col0 { 
+    width: calc(100%);
+}
+
+.sheet-training-notes .sheet-row-textarea {
+    margin-top: 4px;
+}
+
+.sheet-training-notes .sheet-row-textarea .sheet-cell {
+    height: 159px;
+    padding: 4px 8px 4px 4px;
+}
+
+.sheet-training-notes .sheet-row-textarea textarea {
+    height: 145px;
+    margin: 0;
+    padding: 2px 0 2px 2px;
+}
 /* -- repeating controls -- */
 .repcontrol {
     margin-top: 4px;
@@ -1403,6 +1528,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 /* -- Combat Tools: Range Calculator -- */
 .sheet-firing-up-down {
     width: calc(100% - 140px - 0.8em);
+    padding-bottom: 5px;
 }
 
 .sheet-firing-up-down .sheet-table .sheet-title {
@@ -1458,6 +1584,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 /* Combat Tools: Falling and Collision */
 .sheet-falling-collision {
     width: calc(100% - 140px - 0.8em);
+    padding-bottom: 5px;
 }
 
 .sheet-falling-collision .sheet-table .sheet-title {
@@ -1810,6 +1937,13 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
     background-color: red;
     color: white;
     border: 2px solid red;
+}
+
+.sheet-rolltemplate-skillRoll .sheet-container table.sheet-result span.sheet-failure p,
+.sheet-rolltemplate-skillRoll .sheet-container table.sheet-result span.sheet-success p{
+    margin: 4px 0 4px 0;
+    line-height: 14px;
+    font-size: 11px;
 }
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result .sheet-failure-text {
