--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -2026,6 +2026,10 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
 
 /* ROLL TEMPLATE STYLING */
 
+.sheet-rolltemplate-forbiddenlands .sheet-small-caps {
+  font-variant-caps: small-caps;
+}
+
 .sheet-rolltemplate-forbiddenlands {
   padding: 12px 0 12px 0;
 }
@@ -2248,7 +2252,7 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-smaller {
-    font-size: 0.75em;
+    font-size: 0.85em;
 }
 /* add drop shadow to dice */
 .sheet-rolltemplate-forbiddenlands .sheet-template-white-dice, 
@@ -2274,6 +2278,7 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
   padding: 3px;
   text-align: center;
   line-height: 0;
+  box-shadow: 2px 2px 3px #000;
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-maroon-dice {
@@ -2284,6 +2289,7 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
     padding: 3px;
     text-align: center;
     line-height: 0;
+    box-shadow: 2px 2px 3px #000;
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-black-dice {
@@ -2294,6 +2300,7 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
   padding: 3px;
   text-align: center;
   line-height: 0;
+  box-shadow: 2px 2px 3px #000;
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-green-dice {
@@ -2304,6 +2311,7 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
     padding: 3px;
     text-align: center;
     line-height: 0;
+    box-shadow: 2px 2px 3px #000;
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-blue-dice {
@@ -2314,6 +2322,7 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
     padding: 3px;
     text-align: center;
     line-height: 0;
+    box-shadow: 2px 2px 3px #000;
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-orange-dice {
@@ -2324,6 +2333,7 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
   padding: 3px;
   text-align: center;
   line-height: 0;
+  box-shadow: 2px 2px 3px #000;
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-purple-dice {
@@ -2334,6 +2344,7 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
     padding: 3px;
     text-align: center;
     line-height: 0;
+    box-shadow: 2px 2px 3px #000;
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-white-dice > .inlinerollresult,
