--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -803,7 +803,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 }
 
 /* -- GENERAL -- */
-.sheet-attribute { width: 180px; }
+.sheet-attribute { width: 180px; margin-bottom: 100px;}
 .sheet-attribute .sheet-header .sheet-col0 { width: 85px; }
 .sheet-attribute .sheet-header .sheet-col1 { width: 30px; }
 .sheet-attribute .sheet-header .sheet-col2 { width: 35px; }
