add howTo modal for Traits particuliers

--- a/Naheulbeuk/Naheulbeuk.css
+++ b/Naheulbeuk/Naheulbeuk.css
@@ -150,7 +150,8 @@ div.sheet-reglages {
 	input.sheet-display-reglages:checked ~ div.sheet-pj {
 		display:none;
 	}
-	div.sheet-reglages h2 .sheet-modal {
+	div.sheet-reglages h2 .sheet-modal,
+	div.sheet-traits h2 .sheet-modal {
 		margin:0 !important;		
 	}
 	div.sheet-reglages h2 .sheet-cog {
