[Magica Logia] UI Modify
[Magica Logia] Character Sheet Modify

--- a/Magica_Logia/MagicaLogia.css
+++ b/Magica_Logia/MagicaLogia.css
@@ -22,6 +22,108 @@ table, th, td {
     text-align:center;
 	font-size: 1.00em;
 }
+
+
+/* ==== CLASSES ==== */
+.sheet-top-area {display:block; position:relative; clear:both; overflow:hidden; min-height:200px;}
+.sheet-top-area .sheet-left {display:block; position:relative; width:35%; float:left;}
+.sheet-top-area .sheet-right {display:block; position:relative; width:35%; float:right;}
+.sheet-top-area .sheet-logo {display:block; position:absolute; top:50%; left:38%; right:38%; text-align:center; transform:translateY(-50%); -webkit-transform:translateY(-50%);}
+.sheet-top-area .sheet-logo img {max-width:100%;}
+
+.sheet-icon-text-field {display:table; width:100%; table-layout:fixed; position:relative; border-bottom:1px dashed #333;}
+.sheet-icon-text-field.sheet-no-line {border-bottom:0;}
+.sheet-icon-text-field input[type="text"] {display:block; position:relative; width:100%; box-sizing:border-box; height:30px; text-align:left; padding:0 10px; color:#000;}
+.sheet-icon-text-field input[type="text"].sheet-point {font-weight:800; color:#000;}
+.sheet-icon-text-field span {display:table-cell; height:30px; vertical-align:middle; width:85px; padding-left:20px; box-sizing:border-box; color:#777;}
+.sheet-icon-text-field span:before {content:""; display:block; position:absolute; top:50%; left:0; width:15px; height:15px; background:url('https://i.imgur.com/wnVubts.png') no-repeat 50% 50%; background-size:contain; transform:translateY(-50%); -webkit-transform:translateY(-50%);}
+.sheet-icon-text-field span + span {width:auto !important; padding-left:0;}
+.sheet-icon-text-field span + span:before {display:none;}
+.sheet-icon-text-field textarea {height:50px; text-align:left; padding:5px 10px;}
+
+.sheet-icon-text-field.sheet-sub-text span {}
+.sheet-icon-text-field.sheet-sub-text span:before {display:none;}
+
+.sheet-icon-text-field .sheet-side {width:60px !important; text-align:center;}
+.sheet-icon-text-field .sheet-side input[type="checkbox"] {display:none;}
+.sheet-icon-text-field .sheet-side input[type="checkbox"] + label {display:inline-block; position:relative; vertical-align:middle; text-align:left; text-indent:-999px; overflow:hidden; width:15px; height:15px; border-radius:100%; box-sizing:border-box; border:2px solid #000; cursor:pointer; margin:0;}
+.sheet-icon-text-field .sheet-side input[type="checkbox"]:checked + label {background:#333;}
+
+.sheet-icon-text-field .sheet-select-group em {display:block; float:left; position:relative;} 
+.sheet-icon-text-field .sheet-select-group em + em {padding-left:20px;}
+.sheet-icon-text-field .sheet-select-group em + em:before {content:""; display:block; position:absolute; width:4px; height:4px; background:#000; border-radius:100%; left:7px; top:50%; margin-top:-1px;}
+.sheet-icon-text-field .sheet-select-group select {height:30px;}
+
+.sheet-icon-text-row {display:block; overflow:hidden; clear:both;}
+.sheet-icon-text-row .sheet-cols {width:50%; float:left;}
+.sheet-icon-text-row .sheet-icon-text-field span {width:70px;}
+.sheet-icon-text-row.sheet-group-3 .sheet-cols {width:33.33%;}
+
+.sheet-design-text-field {text-align:center; margin-top:-20px;}
+.sheet-design-text-field .sheet-item {display:inline-block; vertical-align:middle; width:70px; height:70px; background:url('https://i.imgur.com/To23ccc.png') no-repeat 50% 50%; background-size:contain;}
+.sheet-design-text-field .sheet-item p {display:block; position:relative; height:55%; margin:0;}
+.sheet-design-text-field .sheet-item span {display:block; position:absolute; top:50%; left:0; right:0; color:#fff; transform:translateY(-50%); -webkit-transform:translateY(-50%);}
+.sheet-design-text-field .sheet-item input[type="text"] {display:block; position:relative; width:80%; margin:0 auto; box-sizing:border-box; text-align:center; color:#000; font-weight:800; font-size:13px;}
+
+.sheet-senario-area {display:block; position:relative; clear:both; overflow:hidden; margin:20px 0;}
+.sheet-senario-area .sheet-left {display:block; position:absolute; width:300px; top:0; left:0; }
+.sheet-senario-area .sheet-right {display:block; position:relative; margin-left:350px; min-height:270px;}
+
+.sheet-senario-area .sheet-design-text-area {text-align:center; font-weight:800;width:300px; height:271px; padding:45px; background:url('https://i.imgur.com/FqueMIm.png') no-repeat 50% 50%; background-size:contain; box-sizing:border-box;}
+.sheet-senario-area .sheet-design-text-area textarea {display:block; margin-top:5px; height:160px; width:100%; text-align:left;}
+
+.sheet-design-graph-bar {display:block; position:relative; line-height:40px; height:40px; overflow:hidden; padding:0 32px 0 135px; background:url('https://i.imgur.com/99M42p7.png') repeat-x 0 50%; background-size: auto 100%;}
+.sheet-design-graph-bar:before {content:""; display:block; position:absolute; top:0; left:0; width:40px; bottom:0; background:url('https://i.imgur.com/M4VO22z.png') no-repeat 0 50%; background-size:auto 100%; box-sizing:border-box; }
+.sheet-design-graph-bar:after {content:""; display:block; position:absolute; top:0; right:0; width:32px; bottom:0; background:url('https://i.imgur.com/M4VO22z.png') no-repeat 100% 50%; background-size:auto 100%; box-sizing:border-box; }
+.sheet-design-graph-bar + .sheet-design-graph-bar {margin-top:10px;}
+.sheet-design-graph-bar span {display:block; position:absolute; top:0; bottom:0; line-height:40px; padding-left:25px; left:40px; }
+.sheet-design-graph-bar select,
+.sheet-design-graph-bar input[type="number"] {height:30px; text-align:center; font-weight:800; color:#000; width:40px; margin-bottom:5px; box-sizing:border-box;}
+.sheet-design-graph-bar select {margin-bottom:6px;}
+.sheet-design-graph-bar .sheet-check-cost {display:block; position:absolute; top:50%; margin-top:-14px; right:30px; width:250px; height:28px; overflow:hidden; text-indent:-999px; background:url('https://i.imgur.com/nsK868s.png') no-repeat 100% 50%; background-size:contain; z-index:1;}
+.sheet-design-graph-bar .sheet-check-cost[value="1"] {background-image:url('https://i.imgur.com/pBemetF.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="2"] {background-image:url('https://i.imgur.com/gFbfdOo.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="3"] {background-image:url('https://i.imgur.com/HfULWWx.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="4"] {background-image:url('https://i.imgur.com/ySEJNis.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="5"] {background-image:url('https://i.imgur.com/i3obpbB.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="6"] {background-image:url('https://i.imgur.com/HEblrpr.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="7"] {background-image:url('https://i.imgur.com/5jnF6YT.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="8"] {background-image:url('https://i.imgur.com/Iz7QDJV.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="9"] {background-image:url('https://i.imgur.com/4zxA5Wu.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="10"] {background-image:url('https://i.imgur.com/HAIi346.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="11"] {background-image:url('https://i.imgur.com/bxuNE6W.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="12"] {background-image:url('https://i.imgur.com/6vPTdjv.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="13"] {background-image:url('https://i.imgur.com/6G2RRPK.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="14"] {background-image:url('https://i.imgur.com/aKpJOKQ.png');}
+.sheet-design-graph-bar .sheet-check-cost[value="15"] {background-image:url('https://i.imgur.com/QPmKcRD.png');}
+
+.sheet-design-graph-bar span:before {content:""; display:block; position:absolute; left:0; top:50%; transform:translateY(-50%); -webkit-transform:translateY(-50%); width:20px; height:20px; background:url('https://i.imgur.com/VV4zOa1.png') no-repeat 50% 50%; background-size:contain;}
+.sheet-design-graph-bar.sheet-ty2 span:before {background-image:url('https://i.imgur.com/KGrf90v.png');}
+
+.sheet-sub-design-title {display:block; position:relative; font-size:13px; font-weight:800; margin-top:20px; margin-bottom:10px; background:url('https://i.imgur.com/PQC0K0S.png') no-repeat 50% 50%; background-size:contain; height:40px; text-align:center; line-height:40px;}
+.sheet-sub-design-title.sheet-ty2 {background-image:url('https://i.imgur.com/eCvmnOn.png'); width:520px;}
+.sheet-sub-design-title.sheet-ty3 {background-image:url('https://i.imgur.com/46qPhvI.png'); width:320px;}
+
+.sheet-floot-roll-box {display:block; clear:both; overflow:hidden;}
+.sheet-floot-roll-box .sheet-roll-left {width:40%; float:left;}
+.sheet-floot-roll-box .sheet-roll-right {width:58%; float:right;}
+.sheet-floot-roll-box table {width:100%; height:100px;}
+.sheet-floot-roll-box table td {vertical-align:middle;}
+.sheet-floot-roll-box .sheet-roll-right button[type=roll] {height:20px; width:20px; line-height:20px; font-size:1.1em; margin:0; padding:0;}
+
+
+.sheet-spell-table {position:relative; padding:26px 20px 20px; background:url('https://i.imgur.com/D6OiWLf.png') no-repeat 50% 50%; background-size:100% 100%; box-sizing:border-box;}
+.sheet-spell-table .sheet-inner {background:#000;}
+.sheet-spell-table table {width:100%; background:#fff; vertical-align:middle;}
+.sheet-spell-table .sheet-soul-spec {background:url('https://i.imgur.com/C7AvDtk.png') no-repeat 0 50%; background-size:auto 100%; padding-left:20px;}
+.sheet-spell-table .sheet-soul-spec input {height:30px;}
+
+.sheet-other-book-box {clear:both; overflow:hidden; display:block;}
+.sheet-other-book-box .sheet-sub-design-title {font-size:16px;}
+.sheet-other-book-box .sheet-book-left {width:520px; float:left;}
+.sheet-other-book-box .sheet-relation-right {width:320px; float:right;}
+
+
 /* ==== CLASSES ==== */
 .sheet-underlined{
     border-bottom: 1px solid black;
@@ -32,18 +134,18 @@ table, th, td {
 }
 .sheet-titled{
     margin-top: -13px;
-    padding-top: 15px;
+    padding-top: 25px;
 }
 .sheet-block{display: block;}
 .sheet-inbox{
     padding-left:2px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     margin-bottom: 12px;
     text-align: left;
 }
 .sheet-inboxright{
     padding-right: 2px;
-    padding-bottom: 2px;
+    padding-bottom: 20px;
     text-align: right;
 }
 .sheet-indent{
@@ -941,6 +1043,7 @@ input.sheet-tabconf:checked + span{
     cursor: pointer;
     margin-top: 0px;
     display: none;
+	left:2px;
 }
 .sheet-options-flag:hover + span,
 .sheet-options-flag:checked + span {
@@ -972,7 +1075,7 @@ input.sheet-tabconf:checked + span{
 .sheet-speeds .sheet-options-flag,
 .sheet-speeds .sheet-options-flag + span {
     top: -2px;
-    left: 0px;
+    left: 5px;
 }
 .sheet-saves .sheet-options-flag.sheet-reflex,
 .sheet-saves .sheet-options-flag.sheet-reflex + span {
@@ -1035,6 +1138,7 @@ input.sheet-tabconf:checked + span{
     margin-top: 2px;
     border-top: 1px dotted rgba(195,153,107,0.2);
     border-bottom: 2px dotted #C3996B;
+	margin:5px 10px;
 }
 .sheet-fullpc .sheet-options,
 .sheet-options-fortitude,
@@ -1051,7 +1155,6 @@ input.sheet-tabconf:checked + span{
 .sheet-spelllike .sheet-options,
 .sheet-npcatk .sheet-options {
     background-color: rgb(250,250,250);
-    width: 100%;
 }
 
 .sheet-options-flag:checked ~ .sheet-options,
@@ -1086,7 +1189,7 @@ input.sheet-tabconf:checked + span{
     position: relative;
     cursor: text;
     font-family: 'Patrick Hand';
-    font-size: 1.2em;
+    font-size: 1.1em;
     line-height: 1.4em;
     min-height: 1.4em;
     text-align: left;
@@ -1112,7 +1215,7 @@ input.sheet-tabconf:checked + span{
     overflow: hidden;
     font-family: inherit;
     font-size: 0.9em;
-    line-height: 1.05em;
+    line-height: 1.5em;
     white-space: pre-wrap;
     text-align: inherit;
     min-height: inherit;
