beginning of chummer import to character sheet. Skills, atts, armor, weapons working.

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -1512,7 +1512,7 @@
 
 	/***** Options Section *****/
 		.sheet-options .sheet-pc-box {
-			min-height: 800px;}
+			min-height: 511px;}
 
 		.sheet-op-col {
 			display       : inline-block;
@@ -1537,6 +1537,14 @@
 			margin-left: 5%;
 			opacity    : 1;
 			width      : 15px;}
+
+	/***** Import  Section *****/
+      .sheet-import-box .sheet-pc-box {
+        min-height: 100px;}
+
+      .sheet-import-box textarea {
+        overflow-y: auto;
+        height: 150px;}
 
 	/***** EDGE & MATRIX CONDITION HEXAGONS *****/
 		.sheet-edg-hex,
